Fixed background image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ font-family: 'Readex Pro', sans-serif;
 text-align: center;
 background-image: url("https://images.unsplash.com/photo-1428908728789-d2de25dbd4e2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
 background-size: cover;
+background-attachment: fixed;
 color: black;
 background-color: lightgrey;
 }
